# t-ledger

./: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
t_ledger/: config.py  constants.py  containers.py  main.py  services.py
t_ledger/application/: mappers.py  portfolio_service.py  service.py
t_ledger/application/services/: active_screen.py  portfolio.py  portfolio_allocation.py
t_ledger/application/services/bond/: base.py  coupon.py  risk.py
t_ledger/domain/: constants.py  contracts.py  dtos.py  entities.py  enums.py  exceptions.py
t_ledger/domain/enums/: core.py  currency.py  instrument.py
t_ledger/domain/interfaces/: adapters.py  clients.py  repositories.py  services.py
t_ledger/domain/models/: base.py  core.py  value_objects.py
t_ledger/infra/: client.py  repositories.py
t_ledger/infra/api/: client.py  consts.py  enums.py  raw_models.py
t_ledger/infra/api/adapters/: core.py  mixins.py
t_ledger/infra/api/mappers/: core.py
t_ledger/presentation/: main.py  utils.py
t_ledger/presentation/shared/: models.py
t_ledger/presentation/shared/formatting/: coupon_calendar.py  portfolio.py  ui.py
t_ledger/presentation/telegram/: bootstrap.py  constants.py  middlewares.py
t_ledger/presentation/telegram/contracts/: callbacks.py  commands.py  messages.py
t_ledger/presentation/telegram/coupon_screen/: __init__.py  callbacks.py  models.py
t_ledger/presentation/telegram/handlers/: __init__.py  coupon.py  main_menu.py  start.py
t_ledger/presentation/telegram/keyboards/: main_menu.py
t_ledger/presentation/telegram/presenters/: coupon_calendar.py  portfolio.py
t_ledger/presentation/telegram/screens/coupon_calendar/: __init__.py  (+3 more)
t_ledger/presentation/telegram/texts/: common.py
t_ledger/presentation/tg_bot/: bootstrap.py  constants.py  handlers.py  keyboards.py  middlewares.py  service.py
t_ledger/presentation/tg_bot/coupon_screen/: keyboard.py  navigation.py  state.py  text.py
tests/: conftest.py
tests/unit/: conftest.py  test_api_client.py  test_bond_risk_service.py
tests/unit/services/: conftest.py  test_bond_coupon_service.py  test_bond_risk_service.py  test_portfolio_allocation_service.py
