[project]
name = "t-ledger"
version = "0.1.0"
description = ""
authors = [
    {name = "Iliya Bound",email = "bound.forcoding@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.23.0,<4.0.0)",
    "aiohttp[speedups] (>=3.13.2,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "dependency-injector (>=4.48.3,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
